# KDC

./: .gitignore  Readme.md  build.bat  build.sh  kdc.py  kube_dashboard.py  kuberead.py  parsers.py  pyproject.toml
.github/workflows/: main.yml
kdc/: config.py  kube_dashboard.py  main.py  parsers.py
